2010-03-04  Sancho Lerena <slerena@gmail.com>

	* pandoradb_data.sql: Added news, default timezone and other
	minor changes. GIS is disabled by default now.

	* include/config_process.php: Force a timezone if not defined.

	* operation/gis_maps/index.php,
        operation/agentes/gis_view.php: Config.php and header stuff

	* operation/servers/view_server_detail.php
	operation/menu.php: Recon operation detail is now shown in the left
	menu.

	* admin_access_logs.php,
	db/db_audit.php
	db/db_info.php
        db/db_event.php
        agentes/configurar_agente.php
        gis_maps/configure_gis_map.php
        gis_maps/index.php: More headers and config.php include stuff.

2010-03-04  Raúl Mateos <raulofpandora@gmail.com>

	* (lot of files): Updated year and headers.

2010-03-04  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/gis_maps/configure_gis_map.php: clean the form, now don't show
	the box of preview map.

2010-03-04  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_gis.php: add comment include for javascript include
	for more to easy change version openlayers for test.
	
	* include/javascript/OpenLayers/OpenLayers.js: warning the source code is
	compress. In the method "drawFeature" for the class "Renderer" backport some
	part of code for to extend the style attributes (labelYOffset in this case).

2010-03-04  Pablo de la Concepción <pablo.concepcion@artica.es>

	* images/gis_map/icons/circle.bad.png ,
	images/gis_map/icons/circle.default.png ,
	images/gis_map/icons/circle.ok.png ,
	images/gis_map/icons/circle.warning.png ,
	images/gis_map/icons/cross.bad.png ,
	images/gis_map/icons/cross.default.png ,
	images/gis_map/icons/cross.ok.png ,
	images/gis_map/icons/cross.warning.png ,
	images/gis_map/icons/marker.bad.png ,
	images/gis_map/icons/marker.default.png ,
	images/gis_map/icons/marker.ok.png ,
	images/gis_map/icons/marker.warning.png ,
	images/gis_map/icons/square_marker.bad.png ,
	images/gis_map/icons/square_marker.default.png ,